--- a/umbrella-sampling.ipynb
+++ b/umbrella-sampling.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "## Prerequisites\n",
     " \n",
-    "* GROMACS 2020.x (other versions will likely work, but might look a bit different)\n",
+    "* GROMACS 2021 or later (other versions will likely work, but might look a bit different)\n",
     "\n",
     "### Optional\n",
     "\n",
@@ -271,7 +271,7 @@
     "pull-coord1-init         = 0.834\n",
     "```\n",
     "\n",
-    "These and many other ``.mdp`` options for pulling are described more full in [the documentation](http://manual.gromacs.org/2020.4/user-guide/mdp-options.html#com-pulling).\n",
+    "These and many other ``.mdp`` options for pulling are described more full in [the documentation](http://manual.gromacs.org/2021/user-guide/mdp-options.html#com-pulling).\n",
     "\n",
     "Let us look at one of the ``grompp.mdp`` run input files:"
    ]
@@ -779,7 +779,7 @@
     "\n",
     "There are many alternative kinds of pulling available in GROMACS.\n",
     "These include alternative coordinate types, e.g. angles, as well as pulling ``geometries``.\n",
-    "Do check out [the documentation](http://manual.gromacs.org/2020.4/user-guide/mdp-options.html#com-pulling) and consider if you need those capabilities for your simulation problems!\n",
+    "Do check out [the documentation](http://manual.gromacs.org/2021/user-guide/mdp-options.html#com-pulling) and consider if you need those capabilities for your simulation problems!\n",
     "\n",
     "## Other resources\n",
     "\n",
