--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -31,9 +31,9 @@
    "source": [
     "## Metadata\n",
     "\n",
-    "Version: 2021\n",
-    "Contributions: Dr Mark Abraham, Dr Christian Blau\n",
-    "Supported by: ENCCS (https://enccs.se/), BioExcel (https://bioexcel.eu/)"
+    "* Version: 2021\n",
+    "* Contributions: Dr Mark Abraham, Dr Christian Blau\n",
+    "* Supported by: ENCCS (https://enccs.se/), BioExcel (https://bioexcel.eu/)"
    ]
   },
   {
