Updates to tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -61,6 +61,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Understanding the simulation system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c677db1debb04d238ec18db00477f144",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "view = nv.show_file('stage1/equil0/archive/confout.gro')\n",
+    "view.clear_representations()\n",
+    "view.add_ball_and_stick('not water')\n",
+    "view"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a neat online tool that shows us the two main degrees of freedom in the peptide, the phi and psi dihedral angles, along with a Ramachandran plot of the http://bioinformatics.org/molvis/phipsi/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Planning an REMD simulation\n",
     "\n",
     "There are a number of inter-connected issues to consider in designing an REMD simulation:\n",
@@ -274,16 +317,18 @@
    "source": [
     "This run will take a bit longer than the equilibration run, but is still only a \"toy\" run. We triggered the use of REMD with the `-replex` flag, which also specified the number of MD integration steps that should take place between exchange attempts. There's a bit of disagreement in the literature about how long that should be. Waiting around 1 ps seems wise in view of how long it takes to make an independent observation of the potential energy, so with a 2 fs time step in the `.mdp` file, around 500 steps between exchanges will be OK. Above, we did exchanges more often, just for the purposes of getting things to happen during the tutorial.\n",
     "\n",
+    "This stage can take too long for a teaching context, so instead of waiting for it to produce output, the notebook will now refer to output that it did produce, which is archived in a subdirectory.\n",
+    "\n",
     "So, what happened? Let's look at one of the four `.log` files that were written, with"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%less stage2/sim1/md.log"
+    "%less stage2/sim1/archive/md.log"
    ]
   },
   {
@@ -325,7 +370,7 @@
     "\n",
     "There are two ways of thinking about the trajectories in REMD, and so two ways the programmer could implement it. At exchange attempts the replica simulations could exchange coordinates, or they could exchange temperatures. Other MD packages tend to exchange temperatures; GROMACS exchanges coordinates. This means that the trajectory written to a single file belongs to the ensemble described by the matching `.tpr` file. Often this is convenient, because you only want to look at the ensemble at your lowest temperature. Because of the exchanges, that trajectory will no longer be continuous - some totally different structure will appear every time an exchange happened. This will mean the time evolution of observables like RMS deviation over time from some other structure will show abrupt jumps.\n",
     "\n",
-    "There are some times you want a trajectory that has continuous coordinates, despite the \"jumps\" in ensemble space. This means chopping up each trajectory file into pieces and pasting them back together in the right order. The Perl script `demux.pl` installed with GROMACS will analyse a single REMD `.log` file and writes two special `.xvg` files that describe the transformation matrices for the trajectory time series from one form to the other, and back. `trjcat -demux` can use these files to do the cut-and-paste on the trajectory files for you."
+    "There are some times you want a trajectory that has continuous coordinates, despite the \"jumps\" in ensemble space. This means chopping up each trajectory file into pieces and pasting them back together in the right order. The Perl script `demux.pl` installed with GROMACS will analyse a single REMD `.log` file and writes two special `.xvg` files that describe the transformation matrices for the trajectory time series from one form to the other, and back. `gmx trjcat -demux` can use these files to do the cut-and-paste on the trajectory files for you."
    ]
   },
   {
